@@ -1,5 +1,11 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2008-11-13  Hans-Peter Nilsson  <hp@axis.com>
+	PR ld/7028
+	* elf.c (assign_file_positions_for_load_sections): Allocate phrds
+	with bfd_zalloc2 instead of bfd_alloc2.  For the amount, use
+	the possibly-preset header-size, not the computed one.
+
 	2008-11-13  Alan Modra  <amodra@bigpond.net.au>
 	PR 7023
 	* elf.c (bfd_section_from_shdr <SHT_SYMTAB>): Fail on invalid sh_info.
